--- a/.stylua.toml
+++ b/.stylua.toml
@@ -1,3 +1,4 @@
+sort_requires.enabled     = true
 column_width              = 120
 line_endings              = "Unix"
 indent_type               = "Spaces"
